# get-coco-attention

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
coco_attention/: __init__.py  cli.py  config.py  hue.py
tests/: test_config.py  test_hue.py
