[project]
name = "coco-attention"
version = "0.1.0"
description = "CLI to set a Hue light to red."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = ["requests>=2.31.0"]

[project.scripts]
coco-attention = "coco_attention.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true
